Ensure .uijet_datepickerinput_wrapper has overflow: visible so that the picker is visible by default

--- a/src/uijet.css
+++ b/src/uijet.css
@@ -618,6 +618,9 @@ video:focus {
     float: left;
     margin-left: 1em;
 }
+.uijet_datepickerinput_wrapper {
+    overflow: visible;
+}
 .uijet_dropmenubutton_wrapper {
     overflow: visible;
 }
